--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -16,13 +17,17 @@
 
     </include>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:id="@+id/imageView"
+        android:layout_height="100dp"
+        android:src="@drawable/logo"/>
 
-    <TextView
-        android:layout_width="221dp"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-
-
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/lvCategories"
+        android:divider="?android:attr/listDivider" />
 
 
 </LinearLayout>
