Added product list activity, redisign DB (dish->product, add table address, suburb, district), put the pictures into asset

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+
     <item
         android:id="@+id/tmenu_about"
         android:title="@string/tmenu_about"
@@ -24,6 +26,12 @@
 
         />
 
+    <item
+        android:id="@+id/tmenu_cart"
+        android:title="Cart"
+        android:icon="@drawable/ic_cart"
+        app:showAsAction="ifRoom"
+        />
 
 
 </menu>
