--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -11,23 +11,41 @@
     tools:context="pk.nz.pinoyklasiks.MainActivity"
     android:weightSum="1">
 
-    <include
-        layout="@layout/toolbar"
-        android:id="@+id/toolbar">
 
-    </include>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:id="@+id/imageView"
-        android:layout_height="100dp"
-        android:src="@drawable/logo"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <ListView
-        android:layout_width="match_parent"
+        <!-- SHOW TOOLBAR -->
+        <include
+            layout="@layout/toolbar"
+            android:id="@+id/toolbar">
+        </include>
+
+
+        <fragment
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="pk.nz.pinoyklasiks.activities.fragments.CategoriesFragment"
+            android:id="@+id/fragment"
+            tools:layout="@layout/fragment_categories" />
+
+
+
+    </LinearLayout>
+
+    <!-- NAVIGATION MENU -->
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/lvCategories"
-        android:divider="?android:attr/listDivider" />
+        app:itemBackground="@drawable/nav_menu_colors"
+        app:menu="@menu/nav_menu"
+        app:headerLayout="@layout/nav_menu_header"
+        android:layout_gravity="start">
 
+    </android.support.design.widget.NavigationView>
 
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
