--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -10,130 +10,144 @@
     <!-- INSERT TOOLBAR -->
     <include layout="@layout/toolbar"
         android:id="@+id/toolbar_product_activity"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:layout_width="0dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
 
-        android:layout_width="384dp"
+        android:layout_width="0dp"
         android:src="@drawable/nopic"
         android:id="@+id/ivProductPic"
+        android:scaleType="centerCrop"
+        android:cropToPadding="false"
+        android:background="#ffffff"
+        android:layout_height="322dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_product_activity"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.3"
+        android:adjustViewBounds="true" />
+
+    <ImageButton
+        android:src="@drawable/plus"
+        android:layout_width="60dp"
+        android:id="@+id/btnPlus"
+        android:textSize="20sp"
+        android:textStyle="normal|bold"
         android:scaleType="fitCenter"
+        android:background="@null"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toLeftOf="@+id/tvProductQuantity"
         android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="8dp"
-        android:layout_height="318dp"
-        android:adjustViewBounds="true"
-        android:cropToPadding="true"
-        android:background="#ffffff"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_product_activity" />
-
-    <Button
-        android:text="+"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnPlus"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvProductDesc"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:textSize="20sp"
-        android:textStyle="normal|bold" />
+        app:layout_constraintHorizontal_bias="0.7" />
 
     <TextView
         android:text="1"
         android:layout_width="45dp"
-        android:layout_height="41dp"
+        android:layout_height="42dp"
         android:id="@+id/tvProductQuantity"
+        android:textSize="30sp"
+        android:gravity="center_vertical|center_horizontal|center"
         android:textAlignment="center"
-        android:gravity="center"
-        android:textSize="25sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/btnPlus"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnPlus" />
-
-    <Button
-        android:text="-"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnMinus"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/tvProductQuantity"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tvProductQuantity"
-        android:textSize="20sp"
-        android:textStyle="normal|bold" />
-
-    <Button
-        android:text="ADD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnProductAddToCart"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnMinus"
         android:textStyle="normal|bold"
-        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvProductDesc"
+        app:layout_constraintRight_toLeftOf="@+id/btnMinus"
+        app:layout_constraintVertical_bias="0.42000002"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp" />
 
+    <ImageButton
+        android:src="@drawable/minus"
+        android:id="@+id/btnMinus"
+        android:textSize="20sp"
+        android:textStyle="normal|bold"
+        android:scaleType="fitCenter"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@null"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.47" />
+
+    <ImageButton
+        android:src="@drawable/cart"
+        android:id="@+id/btnProductAddToCart"
+        android:textStyle="normal|bold"
+        android:textSize="20sp"
+        android:scaleType="centerCrop"
+        android:background="@null"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/btnMinus"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="1.0" />
+
     <TextView
         android:text="Name of product"
-        android:layout_width="293dp"
-        android:layout_height="44dp"
+        android:layout_width="280dp"
+        android:layout_height="43dp"
         android:id="@+id/tvProductName"
         android:textStyle="normal|bold"
         android:textSize="30sp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/tvProductPrice"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.04"
         android:textColor="#494949"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/ivProductPic" />
+        tools:layout_editor_absoluteY="386dp"
+        tools:layout_editor_absoluteX="16dp" />
 
     <TextView
         android:text="Description of product"
-        android:layout_width="0dp"
+        android:layout_width="280dp"
         android:layout_height="0dp"
         android:id="@+id/tvProductDesc"
         android:textSize="17sp"
-        android:layout_marginEnd="65dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="65dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnMinus"
-        android:layout_marginBottom="8dp"
+        android:textAlignment="textStart"
+        android:textColor="#666363"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvProductName"
-        app:layout_constraintVertical_bias="0.0"
-        android:textAlignment="textStart"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:textColor="#666363" />
+        app:layout_constraintRight_toLeftOf="@+id/tvProductPrice"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnMinus"
+        android:layout_marginBottom="8dp" />
 
     <TextView
         android:text="$15.55"
         android:layout_width="64dp"
         android:layout_height="43dp"
         android:id="@+id/tvProductPrice"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tvProductName"
         android:textSize="20sp"
         android:textColor="#2e8602"
         android:textStyle="normal|bold"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/ivProductPic"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp" />
 </android.support.constraint.ConstraintLayout>
