--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -12,9 +12,12 @@
         android:id="@+id/toolbar_product_activity"
         android:layout_height="wrap_content"
         android:layout_width="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <ImageView
 
@@ -24,33 +27,39 @@
         android:scaleType="centerCrop"
         android:cropToPadding="false"
         android:background="#ffffff"
-        android:layout_height="322dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_product_activity"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="266dp"
+        android:adjustViewBounds="true"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.3"
-        android:adjustViewBounds="true" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_product_activity"
+        app:layout_constraintHorizontal_bias="0.0"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <ImageButton
         android:src="@drawable/plus"
-        android:layout_width="60dp"
+        android:layout_width="0dp"
         android:id="@+id/btnPlus"
         android:textSize="20sp"
         android:textStyle="normal|bold"
         android:scaleType="fitCenter"
         android:background="@null"
-        android:layout_height="60dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/tvProductQuantity"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvProductDesc"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.7" />
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.58000004"
+        app:layout_constraintRight_toLeftOf="@+id/tvProductQuantity"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:text="1"
@@ -58,17 +67,18 @@
         android:layout_height="42dp"
         android:id="@+id/tvProductQuantity"
         android:textSize="30sp"
-        android:gravity="center_vertical|center_horizontal|center"
-        android:textAlignment="center"
         android:textStyle="normal|bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvProductDesc"
+        android:layout_marginBottom="27dp"
         app:layout_constraintRight_toLeftOf="@+id/btnMinus"
-        app:layout_constraintVertical_bias="0.42000002"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp" />
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvProductDesc"
+        app:layout_constraintVertical_bias="0.38"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:gravity="center_vertical|center" />
 
     <ImageButton
         android:src="@drawable/minus"
@@ -80,7 +90,7 @@
         android:layout_height="60dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.47" />
@@ -92,12 +102,12 @@
         android:textSize="20sp"
         android:scaleType="centerCrop"
         android:background="@null"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintVertical_bias="1.0"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -109,18 +119,26 @@
 
     <TextView
         android:text="Name of product"
-        android:layout_width="280dp"
+        android:layout_width="0dp"
         android:layout_height="43dp"
         android:id="@+id/tvProductName"
         android:textStyle="normal|bold"
         android:textSize="30sp"
         android:textColor="#494949"
-        tools:layout_editor_absoluteY="386dp"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/ivProductPic"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintRight_toLeftOf="@+id/tvProductPrice"
+        android:layout_marginEnd="7dp"
+        android:layout_marginRight="7dp"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:text="Description of product"
-        android:layout_width="280dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:id="@+id/tvProductDesc"
         android:textSize="17sp"
@@ -129,25 +147,46 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvProductName"
         app:layout_constraintRight_toLeftOf="@+id/tvProductPrice"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintBottom_toTopOf="@+id/btnMinus"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:text="$15.55"
-        android:layout_width="64dp"
-        android:layout_height="43dp"
+        android:layout_height="39dp"
         android:id="@+id/tvProductPrice"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:textColor="#2e8602"
         android:textStyle="normal|bold"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/ivProductPic"
-        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvProductName"
+        android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="8dp"
+        android:layout_width="85dp" />
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ratingBar"
+        app:layout_constraintBottom_toBottomOf="@+id/ivProductPic"
+        android:layout_marginStart="96dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="96dp"
+        app:layout_constraintRight_toRightOf="@+id/ivProductPic"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:numStars="5"
+        android:stepSize="1"
+        android:isIndicator="true"
+        style="@style/Widget.AppCompat.RatingBar"
+        android:elevation="3dp"
+        android:fadeScrollbars="true" />
 </android.support.constraint.ConstraintLayout>
