--- a/app/src/main/res/layout/activity_sub_order.xml
+++ b/app/src/main/res/layout/activity_sub_order.xml
@@ -7,37 +7,44 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="TextView"
-        android:layout_width="71dp"
+        android:text="TOTAL :"
+        android:layout_width="82dp"
         android:layout_height="57dp"
         android:id="@+id/textView4"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_suborder"
-        app:layout_constraintRight_toLeftOf="@+id/textView5"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp" />
+        android:textSize="20sp"
+        android:textColor="#494949"
+        android:textStyle="normal|bold"
+        app:layout_constraintRight_toLeftOf="@+id/tvSubOrderTotal" />
 
     <TextView
-        android:text="TextView"
-        android:layout_width="71dp"
+        android:text="$15.44"
         android:layout_height="57dp"
-        android:id="@+id/textView5"
-        android:layout_marginTop="8dp"
+        android:id="@+id/tvSubOrderTotal"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_suborder"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="8dp"
+        android:textSize="20sp"
+        android:textColor="#2e8602"
+        android:textStyle="normal|bold"
+        android:layout_width="95dp" />
 
     <Button
-        android:text="Button"
+        android:text="Checkout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_suborder"
-        android:layout_marginStart="16dp"
+        android:id="@+id/subOrderCheckOut"
+        android:layout_marginStart="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="24dp"
+        android:background="@drawable/button_checkout"
+        android:textColor="#FFFFFF"
+        android:textStyle="normal|bold"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_suborder"
+        android:layout_marginTop="16dp" />
 
     <include layout="@layout/toolbar"
         android:id="@+id/toolbar_suborder"
