--- a/app/src/main/res/layout/lv_products.xml
+++ b/app/src/main/res/layout/lv_products.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="100dp"
+    android:descendantFocusability="blocksDescendants">
 
     <ImageView
         android:layout_width="115dp"
@@ -44,43 +45,52 @@
         android:textAlignment="center"
         android:textColor="#2e8602"
         android:gravity="center_vertical|center_horizontal|center"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp" />
-
-
-    <TextView
-        android:text="DESCRIPTION"
-        android:id="@+id/tvLVProductDescription"
-        android:layout_width="0dp"
-        android:width="50sp"
-        android:textSize="12sp"
-        android:layout_height="0dp"
-        android:textColor="#666363"
-        app:layout_constraintLeft_toRightOf="@+id/ivLVProductPic"
-        app:layout_constraintRight_toLeftOf="@+id/btnLVAddToCart"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvLVProductName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
-        app:layout_constraintVertical_bias="0.0"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp" />
-
-    <Button
-        android:text="Add"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnLVAddToCart"
-        android:focusable="false"
-        android:layout_width="wrap_content"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvLVProductName" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:text="DESCRIPTION"
+            android:id="@+id/tvLVProductDescription"
+            android:width="50sp"
+            android:textSize="12sp"
+            android:layout_height="0dp"
+            android:textColor="#666363"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvLVProductName"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.08"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/ivLVProductPic"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_width="0dp"
+            app:layout_constraintRight_toLeftOf="@+id/btnLVAddToCart"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" />
+
+    <ImageButton
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+
+        android:layout_width="51dp"
+        android:layout_height="53dp"
+        android:src="@drawable/cart"
+        android:id="@+id/btnLVAddToCart"
+        android:adjustViewBounds="true"
+        android:cropToPadding="true"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvLVProductPrice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
+        android:background="@null"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp" />
 
 
 </android.support.constraint.ConstraintLayout>
