--- a/app/src/main/res/layout/lv_suborder_products.xml
+++ b/app/src/main/res/layout/lv_suborder_products.xml
@@ -52,21 +52,16 @@
 
     <TextView
         android:text="TextView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="40dp"
         android:id="@+id/tvLVSubOrderProductPrice"
         app:layout_constraintLeft_toRightOf="@+id/ivLVSubOrderProductPic"
-        app:layout_constraintTop_toBottomOf="@+id/tvLVSubOrderProductName"
-        android:layout_marginTop="8dp"
+        android:textColor="#494949"
+        android:textSize="14sp"
+        android:layout_width="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/btnLVSubOrderMinus"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:textColor="#494949"
-        android:textSize="14sp" />
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tvLVSubOrderTotalPrice" />
 
     <ImageButton
         android:src="@drawable/plus"
@@ -113,6 +108,23 @@
         app:layout_constraintRight_toLeftOf="@+id/tvLVSubOrderQuantity"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="0dp"
+        android:layout_height="34dp"
+        android:id="@+id/tvLVSubOrderTotalPrice"
+        app:layout_constraintRight_toLeftOf="@+id/btnLVSubOrderMinus"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/tvLVSubOrderProductPrice"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.33"
+        app:layout_constraintTop_toBottomOf="@+id/tvLVSubOrderProductName"
+        android:layout_marginTop="8dp" />
 
 
 </android.support.constraint.ConstraintLayout>
