--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -32,9 +32,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_product_activity"
-        app:layout_constraintHorizontal_bias="0.0"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.56"
+        android:layout_marginTop="8dp" />
 
     <ImageButton
         android:src="@drawable/plus"
@@ -172,21 +177,4 @@
         android:layout_marginRight="8dp"
         android:layout_width="85dp" />
 
-    <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ratingBar"
-        app:layout_constraintBottom_toBottomOf="@+id/ivProductPic"
-        android:layout_marginStart="96dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="96dp"
-        app:layout_constraintRight_toRightOf="@+id/ivProductPic"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:numStars="5"
-        android:stepSize="1"
-        android:isIndicator="true"
-        style="@style/Widget.AppCompat.RatingBar"
-        android:elevation="3dp"
-        android:fadeScrollbars="true" />
 </android.support.constraint.ConstraintLayout>
