--- a/app/src/main/res/layout/activity_sub_order.xml
+++ b/app/src/main/res/layout/activity_sub_order.xml
@@ -8,29 +8,34 @@
 
     <TextView
         android:text="TOTAL :"
-        android:layout_width="82dp"
-        android:layout_height="57dp"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
         android:id="@+id/textView4"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_suborder"
         android:textSize="20sp"
         android:textColor="#494949"
         android:textStyle="normal|bold"
-        app:layout_constraintRight_toLeftOf="@+id/tvSubOrderTotal" />
-
-    <TextView
-        android:text="$15.44"
-        android:layout_height="57dp"
-        android:id="@+id/tvSubOrderTotal"
+        android:layout_marginStart="80dp"
+        app:layout_constraintLeft_toRightOf="@+id/subOrderCheckOut"
+        android:layout_marginLeft="80dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_suborder"
+        app:layout_constraintRight_toLeftOf="@+id/tvSubOrderTotal"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp" />
+
+    <TextView
+        android:text="$0"
+        android:layout_height="57dp"
+        android:id="@+id/tvSubOrderTotal"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="8dp"
         android:textSize="20sp"
         android:textColor="#2e8602"
         android:textStyle="normal|bold"
-        android:layout_width="95dp" />
+        android:layout_width="wrap_content"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView4" />
 
     <Button
         android:text="Checkout"
@@ -44,7 +49,7 @@
         android:textColor="#FFFFFF"
         android:textStyle="normal|bold"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_suborder"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="8dp" />
 
     <include layout="@layout/toolbar"
         android:id="@+id/toolbar_suborder"
@@ -56,17 +61,17 @@
         app:layout_constraintHorizontal_bias="0.44" />
 
     <ListView
-        android:layout_width="0dp"
+        android:layout_width="376dp"
         android:layout_height="0dp"
         android:id="@+id/lvSubOrder"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.62"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/subOrderCheckOut" />
 </android.support.constraint.ConstraintLayout>
