--- a/app/src/main/res/layout/header_categories.xml
+++ b/app/src/main/res/layout/header_categories.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:weightSum="1"
+    android:layout_width="match_parent"
+    android:id="@+id/headerCategory"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="183dp"
-        android:layout_height="109dp"
-        android:src="@drawable/special_1"
-        android:id="@+id/imageView"
-        android:layout_weight="0.72"
-        android:scaleType="centerCrop" />
 
     <ImageView
-        android:layout_width="185dp"
-        android:src="@drawable/special_1"
-        android:id="@+id/imageView4"
-        android:scaleType="centerCrop"
+        android:layout_width="0dp"
+        android:layout_height="98dp"
+        android:src="@drawable/advert_stub"
+        android:id="@+id/ivAdvert"
         android:adjustViewBounds="true"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        android:scaleType="fitXY"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintBottom_toBottomOf="parent" />
+</android.support.constraint.ConstraintLayout>
