--- a/app/src/main/res/layout/lv_products.xml
+++ b/app/src/main/res/layout/lv_products.xml
@@ -7,14 +7,18 @@
     android:descendantFocusability="blocksDescendants">
 
     <ImageView
-        android:layout_width="115dp"
-        android:layout_height="0dp"
+        android:layout_width="113dp"
+        android:layout_height="87dp"
         android:id="@+id/ivLVProductPic"
         android:scaleType="fitXY"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintVertical_bias="0.52"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp" />
 
 
     <TextView
@@ -76,8 +80,6 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
 
-        android:layout_width="51dp"
-        android:layout_height="53dp"
         android:src="@drawable/cart"
         android:id="@+id/btnLVAddToCart"
         android:adjustViewBounds="true"
@@ -89,8 +91,10 @@
         android:layout_marginBottom="16dp"
         android:scaleType="centerCrop"
         android:background="@null"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp" />
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp" />
 
 
 </android.support.constraint.ConstraintLayout>
