--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,13 +3,20 @@
     <item
         android:id="@+id/nav_menu_categories"
         android:icon="@drawable/ic_menu"
-        android:title="Menu"
+        android:title="@string/main_menu"
         />
     <item
         android:id="@+id/nav_menu_orders"
         android:icon="@drawable/ic_cart"
-        android:title="Orders"
+        android:title="@string/Cart"
         />
+
+    <item
+        android:id="@+id/nav_menu_history"
+        android:icon="@drawable/ic_cart"
+        android:title="@string/orders_history"
+        />
+
     <item
         android:id="@+id/nav_menu_location"
         android:icon="@drawable/ic_location"
