--- a/app/src/main/res/layout/lv_suborder_products.xml
+++ b/app/src/main/res/layout/lv_suborder_products.xml
@@ -9,7 +9,6 @@
     <ImageView
         android:id="@+id/ivLVSubOrderProductPic"
         android:scaleType="fitXY"
-        android:layout_width="60dp"
         android:src="@drawable/nopic"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,7 +17,8 @@
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/btnLVSubOrderDel"
         android:layout_marginLeft="8dp"
-        android:layout_height="60dp" />
+        android:layout_height="60dp"
+        android:layout_width="90dp" />
 
     <ImageButton
         android:focusable="false"
@@ -31,9 +31,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-         />
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:layout_width="0dp"
