--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
+<android.support.constraint.ConstraintLayout
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!-- INSERT TOOLBAR -->
+
+
+
+
+
     <include layout="@layout/toolbar"
         android:id="@+id/toolbar_product_activity"
         android:layout_height="wrap_content"
@@ -24,10 +29,8 @@
         android:layout_width="0dp"
         android:src="@drawable/nopic"
         android:id="@+id/ivProductPic"
-        android:scaleType="centerCrop"
-        android:cropToPadding="false"
-        android:background="#ffffff"
-        android:layout_height="266dp"
+        android:scaleType="fitCenter"
+        android:background="#eeeeee"
         android:adjustViewBounds="true"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -38,31 +41,28 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.56"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:cropToPadding="true"
+        android:layout_height="270dp" />
 
     <ImageButton
-        android:src="@drawable/plus"
-        android:layout_width="0dp"
-        android:id="@+id/btnPlus"
+        android:src="@drawable/minus"
+        android:layout_width="60dp"
+        android:id="@+id/btnMinus"
         android:textSize="20sp"
         android:textStyle="normal|bold"
         android:scaleType="fitCenter"
         android:background="@null"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvProductDesc"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        app:layout_constraintVertical_bias="0.58000004"
-        app:layout_constraintRight_toLeftOf="@+id/tvProductQuantity"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        app:layout_constraintVertical_bias="0.25"
         tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1" />
 
@@ -75,19 +75,17 @@
         android:textStyle="normal|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="27dp"
-        app:layout_constraintRight_toLeftOf="@+id/btnMinus"
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@+id/tvProductDesc"
         app:layout_constraintVertical_bias="0.38"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintBottom_creator="1"
-        android:gravity="center_vertical|center" />
+        android:gravity="center_vertical|center"
+        app:layout_constraintLeft_toRightOf="@+id/btnMinus" />
 
     <ImageButton
-        android:src="@drawable/minus"
-        android:id="@+id/btnMinus"
+        android:src="@drawable/plus"
+        android:id="@+id/btnPlus"
         android:textSize="20sp"
         android:textStyle="normal|bold"
         android:scaleType="fitCenter"
@@ -96,9 +94,11 @@
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
+        app:layout_constraintLeft_toRightOf="@+id/tvProductQuantity"
+        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.47" />
+        android:layout_marginRight="16dp"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <ImageButton
         android:src="@drawable/cart"
@@ -112,13 +112,13 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="1.0"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/btnMinus"
+        app:layout_constraintLeft_toRightOf="@+id/btnPlus"
         android:layout_marginLeft="8dp"
         app:layout_constraintHorizontal_bias="1.0" />
 
@@ -146,7 +146,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:id="@+id/tvProductDesc"
-        android:textSize="17sp"
+        android:textSize="16sp"
         android:textAlignment="textStart"
         android:textColor="#666363"
         android:layout_marginTop="8dp"
@@ -157,7 +157,7 @@
         android:layout_marginStart="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnMinus"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
         android:layout_marginBottom="8dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
