--- a/app/src/main/res/layout/fragment_left_menu.xml
+++ b/app/src/main/res/layout/fragment_left_menu.xml
@@ -5,30 +5,21 @@
     android:layout_height="match_parent"
     android:weightSum="1"
     android:layout_width="200dp"
-    android:background="@drawable/bg_menu">
+    android:background="#8f0303">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView3"
+        android:layout_height="97dp"
+        android:id="@+id/ivLMLogo"
         android:src="@drawable/logo"
-        android:layout_weight="0.15" />
-
-    <Button
-        android:text="Menu"
+        android:background="#FFFFFF"
+        android:layout_marginTop="10dp" />
+    <android.support.design.widget.NavigationView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/button2" />
+        android:layout_height="match_parent"
+        app:menu="@menu/nav_menu"
+        android:background="#8f0303"
+        app:itemTextColor="#ffffff">
+    </android.support.design.widget.NavigationView>
 
-    <Button
-        android:text="Orders"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/button3" />
-
-    <Button
-        android:text="Location"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/button4" />
 </LinearLayout>
