--- a/app/src/main/res/layout/lv_categories.xml
+++ b/app/src/main/res/layout/lv_categories.xml
@@ -17,7 +17,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"
+        android:background="@null" />
 
 
     <TextView
